a simple opengl setup i could use as template

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "build",
+            "preLaunchTask": "Build OpenGL Project",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
