--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 # Add source files
 set(SOURCES
     src/main.cpp
-    third_party/glad.c
+    include/glad.c
+    
 )
 
 # Add executable
